# binius64

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  CONTRIBUTING.md  COPYRIGHT  Cargo.toml  LICENSE-APACHE  README.md  SYMBOLIC-VERIFIER-ROADMAP.md  prek.toml  rust-toolchain.toml
.claude/skills/binius-xyz-docs/: SKILL.md
.claude/skills/jj-describe/: SKILL.md
.github/workflows/: ci.yml  docs.yml
crates/arith-bench/: Cargo.toml
crates/arith-bench/benches/: field_mul.rs
crates/arith-bench/src/: monbijou.rs  test_utils.rs  underlier.rs
crates/arith-bench/src/arch/: aarch64.rs  portable64.rs  x86_64.rs
crates/arith-bench/src/ghash/: aarch64.rs  clmul.rs  mod.rs  soft64.rs
crates/arith-bench/src/ghash_sq/: aarch64.rs  mod.rs  sliced.rs  soft64.rs  x86_64.rs
crates/arith-bench/src/monbijou/: aarch64.rs  mod.rs  soft64.rs  x86_64.rs
crates/arith-bench/src/polyval/: clmul.rs
crates/bip32-sig/: Cargo.toml
crates/bip32-sig/src/: address.rs  circuit.rs  derive.rs  main.rs  proof_file.rs
crates/circuits/proptest-regressions/: concat.txt
crates/circuits/src/: base64.rs  bytes.rs  concat.rs  fixed_byte_vec.rs  hmac.rs  jwt_claims.rs  multiplexer.rs  ripemd.rs  rs256.rs  shift.rs  slice.rs  util.rs
crates/compute/src/: buffer_pool.rs  lib.rs
crates/core/: Cargo.toml
crates/core/src/: constraint_system.rs  consts.rs  error.rs  verify.rs  word.rs
crates/core/test_data/: README.md
crates/examples/: Cargo.toml
crates/examples/benches/: blake2b.rs  blake2s.rs  ethsign.rs  hashsign.rs  keccak.rs  sha256.rs  sha512.rs
crates/examples/examples/: ec_msm.rs
crates/examples/snapshots/: bitcoin_headers.snap  bitcoin_p2pkh.snap  blake2b.snap  blake2s.snap  blake3_compress.snap  ec_msm.snap  ethsign.snap  hashsign.snap  keccak.snap  sha256.snap  sha512.snap  zklogin.snap
crates/examples/src/: cli.rs  lib.rs  snapshot.rs
crates/field/: Cargo.toml
crates/field/benches/: binary_field.rs  ghash_invert.rs  ghash_widening.rs  packed_field_element_access.rs  packed_field_init.rs  packed_field_invert.rs  packed_field_linear_transform.rs  packed_field_mul_alpha.rs  packed_field_multiply.rs  packed_field_slice_iter.rs  packed_field_spread.rs  packed_field_square.rs  packed_field_utils.rs
crates/field/src/: aes_field.rs  arithmetic_traits.rs  as_packed_field.rs  binary_field.rs  binary_field_arithmetic.rs  extension.rs  field.rs  ghash.rs  ghash_sq.rs  lib.rs  linear_transformation.rs  packed.rs  packed_aes.rs  packed_aes_field.rs  packed_binary_field.rs  packed_extension.rs  packed_extension_ops.rs  packed_ghash.rs  packed_ghash_sq.rs  random.rs  tests.rs  transpose.rs  util.rs
crates/frontend/: Cargo.toml
crates/frontend/src/: lib.rs  ops.rs  stat.rs  util.rs
crates/hash/: Cargo.toml
crates/hash/benches/: blake3.rs  blake3_portable.rs  sha256.rs
crates/hash/src/: binary_merkle_tree.rs  blake3.rs  blake3_portable.rs  compress.rs  lib.rs  parallel_compression.rs  parallel_digest.rs  serialization.rs  sha256.rs  sha256_x4.rs  vision.rs
crates/iop/: Cargo.toml
crates/iop-prover/: Cargo.toml
crates/iop-prover/benches/: binary_merkle_tree.rs
crates/iop-prover/src/: basefold.rs  basefold_channel.rs  basefold_compiler.rs  basefold_zk_channel.rs  channel.rs  lib.rs  logup_star.rs  naive_channel.rs
crates/iop/src/: basefold.rs  basefold_channel.rs  basefold_compiler.rs  basefold_zk_channel.rs  channel.rs  lib.rs  logup_star.rs  naive_channel.rs  oracle_setup_channel.rs  size_tracking_channel.rs
crates/ip-prover/: Cargo.toml
crates/ip-prover/benches/: bivariate_product.rs
crates/ip-prover/src/: channel.rs  fracaddcheck.rs  lib.rs  prodcheck.rs
crates/ip/src/: channel.rs  fracaddcheck.rs  lib.rs  mlecheck.rs  prodcheck.rs
crates/m4/: Cargo.toml
crates/m4-prover/: Cargo.toml
crates/m4-prover/benches/: assemble_operation_witness.rs  keccak_witness_gen.rs  sha256_compressions.rs  xmss.rs
crates/m4-prover/src/: bitand.rs  lib.rs  prove.rs  (+6 more)
crates/math/: Cargo.toml
crates/prover/: Cargo.toml
crates/spartan-frontend/: Cargo.toml
crates/spartan-frontend/src/: circuit_builder.rs  circuits.rs  compiler.rs  constraint_system.rs  gate.rs  lib.rs  wire_elimination.rs
crates/spartan-prover/: Cargo.toml
crates/spartan-prover/benches/: spartan_prove.rs
crates/spartan-prover/src/: error.rs  lib.rs  pcs.rs  wiring.rs
crates/spartan-prover/src/wrapper/: mod.rs  replay_channel.rs  zk_wrapped_prover_channel.rs
crates/spartan-prover/tests/: integration_test.rs  wrapper_integration_test.rs
crates/spartan-verifier/: Cargo.toml
crates/spartan-wrapper/: Cargo.toml
crates/spartan-wrapper-prover/: Cargo.toml
crates/spartan-wrapper-prover/src/: lib.rs  zk_wrapped_prover_channel.rs
crates/spartan-wrapper-prover/tests/: integration_test.rs
crates/spartan-wrapper/src/: build_elem.rs  channel.rs  circuit_elem.rs  lib.rs  zk_wrapped_channel.rs
crates/utils/: Cargo.toml  build.rs
crates/utils/benches/: par_rand.rs
crates/utils/src/: checked_arithmetics.rs  env.rs  lib.rs  rand.rs  random_access_sequence.rs  serialization.rs  strided_array.rs
crates/utils/src/rayon/: mod.rs
crates/utils/src/rayon/iter/: indexed_parallel_iterator.rs  mod.rs  parallel_iterator.rs
crates/utils/src/rayon/slice/: parallel_slice_mut.rs
crates/verifier/: Cargo.toml
recursion/: .gitignore  NOTE-for-jimpo-binius64-recursion.md  README.md  SPEC-monster-discharge.md
recursion/discharge/: Cargo.toml
recursion/discharge/src/: cubic.rs  discharge.rs  fracadd.rs  leaf.rs  lib.rs  merged.rs  packed.rs  recorder.rs  step2.rs  synth.rs  table.rs  vk.rs
recursion/discharge/tests/: rederivation_step1.rs  step2_adversarial.rs  step2_small.rs  synth_scaling.rs  verifier_fresh_cs.rs
recursion/gate/: Cargo.toml
recursion/gate/src/: main.rs
recursion/multizk/: Cargo.toml
recursion/multizk/src/: lib.rs  main.rs  multi_zk.rs
recursion/wrap/: Cargo.toml
recursion/wrap/src/: integrated.rs  lib.rs  substituting.rs
recursion/wrap/tests/: independent_attacks.rs  synth_e2e.rs
tools/: check_copyright_notice.py  clippy-changed-packages.sh
(+455 files in other folders)
