[package]
name = "binius-spartan-frontend"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
binius-field = { path = "../field" }
binius-utils = { path = "../utils" }
bytemuck = { workspace = true, features = ["extern_crate_alloc"] }
smallvec.workspace = true

[dev-dependencies]
binius-math = { path = "../math", features = ["test-utils"] }
rand.workspace = true

[lints]
workspace = true
