[package]
name = "binius-spartan-prover"
version.workspace = true
edition.workspace = true
authors.workspace = true

[lints]
workspace = true

[dependencies]
binius-field = { path = "../field" }
binius-hash = { path = "../hash", default-features = false }
binius-iop = { path = "../iop", default-features = false }
binius-iop-prover = { path = "../iop-prover", default-features = false }
binius-ip = { path = "../ip", default-features = false }
binius-ip-prover = { path = "../ip-prover", default-features = false }
binius-math = { path = "../math", default-features = false }
binius-transcript = { path = "../transcript", default-features = false }
binius-spartan-frontend = { path = "../spartan-frontend", default-features = false }
binius-spartan-verifier = { path = "../spartan-verifier", default-features = false }
binius-utils = { path = "../utils", default-features = false }
digest.workspace = true
itertools.workspace = true
rand.workspace = true
thiserror.workspace = true
tracing.workspace = true

[dev-dependencies]
anyhow.workspace = true
binius-hash = { path = "../hash" }
binius-iop = { path = "../iop" }
binius-ip = { path = "../ip" }
binius-math = { path = "../math", features = ["test-utils"] }
binius-spartan-verifier = { path = "../spartan-verifier" }
binius-verifier = { path = "../verifier" }
rand = { workspace = true, features = ["thread_rng"] }
smallvec.workspace = true

[features]
default = ["rayon"]
rayon = ["binius-utils/rayon", "binius-hash/rayon", "binius-iop/rayon", "binius-iop-prover/rayon", "binius-ip-prover/rayon", "binius-math/rayon"]
