[package]
name = "binius-spartan-wrapper-prover"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
binius-field = { path = "../field" }
binius-iop = { path = "../iop" }
binius-ip = { path = "../ip" }
binius-iop-prover = { path = "../iop-prover" }
binius-ip-prover = { path = "../ip-prover" }
binius-math = { path = "../math" }
binius-spartan-frontend = { path = "../spartan-frontend" }
binius-spartan-prover = { path = "../spartan-prover" }
binius-spartan-verifier = { path = "../spartan-verifier" }
binius-spartan-wrapper = { path = "../spartan-wrapper" }
binius-transcript = { path = "../transcript" }
binius-utils = { path = "../utils" }
rand.workspace = true

[dev-dependencies]
binius-hash = { path = "../hash" }
binius-iop = { path = "../iop" }
binius-ip = { path = "../ip" }
binius-math = { path = "../math" }
binius-spartan-verifier = { path = "../spartan-verifier" }
binius-spartan-wrapper = { path = "../spartan-wrapper" }
binius-verifier = { path = "../verifier" }

[lints]
workspace = true
