[package]
name = "binius-spartan-wrapper"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
binius-field = { path = "../field" }
binius-iop = { path = "../iop" }
binius-ip = { path = "../ip" }
binius-spartan-frontend = { path = "../spartan-frontend" }
binius-spartan-verifier = { path = "../spartan-verifier" }
binius-transcript = { path = "../transcript" }
binius-utils = { path = "../utils" }

[dev-dependencies]
binius-hash = { path = "../hash" }
bytemuck.workspace = true

[lints]
workspace = true
