[package]
name = "binius-utils"
version.workspace = true
edition.workspace = true
authors.workspace = true
build = "build.rs"

[lints]
workspace = true

[dependencies]
array-util.workspace = true
bytes.workspace = true
cfg-if.workspace = true
hybrid-array.workspace = true
itertools.workspace = true
rand.workspace = true
rayon = { optional = true, workspace = true}
regex = { workspace = true, optional = true }
thiserror.workspace = true
trait-set.workspace = true

[dev-dependencies]
criterion.workspace = true
rand = { workspace = true, features = ["thread_rng"] }

[features]
default = []
rayon = ["dep:rayon"]
platform-diagnostics = ["dep:regex"]

[[bench]]
name = "par_rand"
harness = false
required-features = ["rayon"]
