[package]
name = "binius-recursion-discharge"
version = "0.1.0"
edition = "2024"
description = "Committed-table batched discharge of K deferred Binius64 monster claims (STEP 1 native check + STEP 2 committed-table PCS check)."

[features]
# STEP-2 committed-table PCS endgame (M_VK/M_D commit + Phase C fracaddcheck + the merged
# BaseFold opener). PORTED to the upstream #1611/#1693/#1500/#1586 channel-oriented BaseFold API
# (native combined verify_mlecheck_basefold over two non-ZK oracles + pinned commitments). Kept
# opt-in so the always-on STEP-1 re-derivation (Wall A) is the default build; enable with
# `--features step2` (E2E + negatives green). See NOTE / final report.
default = []
step2 = []

[[bin]]
name = "scaling_demo"
required-features = ["step2"]

[dependencies]
binius-core = { path = "../../crates/core" }
binius-field = { path = "../../crates/field" }
binius-hash = { path = "../../crates/hash" }
binius-prover = { path = "../../crates/prover" }
binius-verifier = { path = "../../crates/verifier" }
binius-transcript = { path = "../../crates/transcript" }
binius-utils = { path = "../../crates/utils" }
binius-iop = { path = "../../crates/iop" }
binius-iop-prover = { path = "../../crates/iop-prover" }
binius-math = { path = "../../crates/math" }
binius-ip = { path = "../../crates/ip" }
binius-ip-prover = { path = "../../crates/ip-prover" }
anyhow = "1"
rand = "0.10"
sha2 = "0.10"
itertools = "0.14"
